<resources>
    <string name="app_name">Show Room Managerment</string>
    <string name="device_id">Device ID: </string>
    <string name="app_version">App ver: </string>
    <string name="database_version">DB ver: </string>
    <string name="userid">USER ID</string>
    <string name="password">PASSWORD</string>
    <string name="rememberswitch">Remember Login</string>
    <string name="webpos">WEBPOS</string>
    <string name="smart_active">SMART ACTIVE</string>
    <string name="login">LOGIN</string>
    <string name="noaccount">No account yet ? </string>
    <string name="creataccount">Create one</string>
    <string name="forgotpassword">Forgot password</string>
    <string name="privacy">Privacy policy</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="titlemenuapp">MENU APP</string>
    <string name="btnname_product_manage">PRODUCT MANAGER</string>
    <string name="btnname_scanner_Setting">SCANNER SETTING</string>
    <string name="title_managerproduct">MANAGER</string>
    <string name="btn_inventory">INVENTORY</string>
    <string name="btn_issue_book">ISSUE BOOK</string>
    <string name="btn_newincoing">NEW INCOMING</string>
    <string name="btn_newoutgoing">NEW OUTGOING</string>
    <string name="btn_report">REPORTS</string>
    <string name="setting">SETTING</string>
    <string name="mac_address">MAC ADRESS: vd 00:15:39:BB</string>
    <string name="power">POWER(0-33): VD 33</string>
    <string name="ip_address">IP ADDRESS: VD 192.168.1.162</string>
    <string name="port">PORT: VD 8080</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_cancle">CANCLE</string>
    <string name="TITLE_FRAGMENT_INCOMING">New Incoming</string>
    <string name="serial">Serial</string>
    <string name="dateinout">Date</string>
    <string name="whname">WH Name</string>
    <string name="typeincoming">Type Incoming</string>
    <string name="cmt">Comment</string>
    <string name="title_inventory">INVENTORY</string>
    <string name="number_inventory">Num</string>
    <string name="Name_inventory">Name</string>
    <string name="Barcode_inventory">Barcode</string>
    <string name="Quantity_inventory">Quantity</string>
    <string name="Quantity_inventory_2">Quantity:</string>
    <string name="Error_inventory">Error:</string>
    <string name="title_member">Book information</string>
    <string name="member_name">Name:</string>
    <string name="member_ID">ID:</string>
    <string name="Member_RFID">RFID:</string>
    <string name="Member_gender">Author:</string>
    <string name="Member_currentmembership">Membership:</string>
    <string name="Member_contact">Contact:</string>
    <string name="Book_number">Number</string>
    <string name="Book_title">Book title</string>
    <string name="Book_RFID">RFID code</string>
    <string name="Book_author">Author</string>
    <string name="Book_categories">Categories</string>
    <string name="cancel_button">Cancel</string>
    <string name="title">Changes the displayed issue</string>
    <string name="titleyear">Specify release date</string>
    <string name="classify">By Classification</string>
    <string name="publish">By publisher</string>
    <string name="back">Back</string>
    <string name="yearnull">Release date NULL</string>
    <string name="year1over">Over a year ago</string>
    <string name="year2over">2+ years ago</string>
    <string name="year3over">3+ years ago</string>
    <string name="year4over">4+ years ago</string>
    <string name="year5over">5+ years ago</string>
    <string name="number_sample">Number of samples</string>
    <string name="number_candidates">Number of candidates</string>
    <string name="inlist">In list</string>
    <string name="outlist">out of list</string>
    <string name="ISBN">ISBN</string>
    <string name="check">check</string>
    <string name="name">Title</string>
    <string name="location_name">Location CD: </string>
    <string name="finalpurchasedate">Final purchase: </string>
    <string name="finalsaledate">Final sale: </string>
    <string name="sale_number">Sales number: </string>
    <string name="national_sale_number">Total national sales: </string>
    <string name="logout_msg">Logout.\nAre you sure? </string>
    <string name="cancel_msg">Cancel the scanned item\n. \nAre you sure? </string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="grant_camera_permission" translatable="false">To use the barcode scanner, please grant camera permissions and try again.</string>
    <string name="hpc">Return Check</string>
    <string name="shik">Item Swap</string>
    <string name="order">Order</string>
    <string name="replenishment_order">Replenishment Order</string>
    <string name="product_search">Product Search</string>
    <string name="search_with_est_order_function">Product search</string>
    <string name="search_information_display_only">Product Search General</string>
    <string name="purchase">Purchase</string>
    <string name="incoming_goods">Incoming goods inspection</string>
    <string name="direct_purchase">Direct Purchase</string>
    <string name="returns">Returns</string>
    <string name="books_returns">Books Returns</string>
    <string name="books_returns_manage">Non-returns</string>
    <string name="magazine_returns">Magazine returns</string>
    <string name="media_returns">Media Returns</string>
    <string name="direct_return">Direct Return</string>
    <string name="move">Move</string>
    <string name="moving_goods_receipt">Moving goods receipt</string>
    <string name="moving_issue">Moving Issue</string>
    <string name="inventory_registration">Inventory Registration</string>
    <string name="inventory_registration_vj">Inventory Registration</string>
    <string name="location_registration">Location Registration</string>
    <string name="inventory">Inventory</string>
    <string name="configuration">Settings</string>
    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permision_available_contacts">Contacts Permissions have been granted. Contacts screen can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access.</string>
    <string name="storage_bin_list">Bin List</string>
    <string name="total_storage_bin">Total storage bin</string>
    <string name="total_product">Total Points</string>
    <string name="bin_code">Bin Bin</string>
    <string name="total_product_in_bin">Points</string>
    <string name="total_item_in_bin">Quantity</string>
    <string name="person_in_charge_id">Person ID</string>
    <string name="device_no">Device NO</string>
    <string name="registration_date">Registration date</string>
    <string name="shelf_no">Shelf NO</string>
    <string name="after_change_self_no">After change shelf NO</string>
    <string name="return_destination">Return destination</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_1">Supplier</string>
    <string name="vendor">Vendor</string>
    <string name="box_no">box no</string>
    <string name="slip_no">Slip NO</string>
    <string name="processing_table_no">Processing table NO</string>
    <string name="unit_price">Purchase unit price</string>
    <string name="partner">Partner NO</string>
    <string name="new_middle_division">New middle division</string>
    <string name="process_division">Process Division</string>
    <string name="new_product">new</string>
    <string name="middle_ages">Used</string>
    <string name="process_register_change">Register/Change</string>
    <string name="process_delete">Delete</string>
    <string name="number_order">Number</string>
    <string name="shelf_number">Shelf</string>
    <string name="barcode_product">Barcode</string>
    <string name="name_product">Name</string>
    <string name="cd1_insert">JAN Jodan or JAN</string>
    <string name="cd2_or_price_insert">JAN bottom or price</string>
    <string name="addoncd">Addon Code (5 digits)</string>
    <string name="date_scan">Registration date</string>
    <string name="product_detail">Product Information</string>
    <string name="search_fail">No products found</string>
    <string name="base_price">Price</string>
    <string name="tax_include_pride">Tax price</string>
    <string name="quantity">Quan</string>
    <string name="total_quantity">Quantity</string>
    <string name="total_price">Total</string>
    <string name="total_amount">Amount</string>
    <string name="total_error">Error</string>
    <string name="count">COUNT</string>
    <string name="btn_moving_good_setting">Moving \ngood settings</string>
    <string name="btn_return">Return</string>
    <string name="btn_back">Back</string>
    <string name="btn_update">Update</string>
    <string name="btn_send">Send</string>
    <string name="btn_registration">Registration</string>
    <string name="btn_search">Search</string>
    <string name="btn_delete_all">Delete all</string>
    <string name="btn_manual_input">Manual input</string>
    <string name="btn_quantity">Quantity</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_next">Next</string>
    <string name="btn_previous">Pre</string>
    <string name="btn_delete_all_search">Delete all search data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_submit_product">Submit data. </string>
    <string name="btn_notification_submit_product_yes">OK</string>
    <string name="btn_notification_submit_product_no">Cancel</string>
    <string name="btn_notification_submit_product_delete_all_setting">Delete all without submitting</string>
    <string name="btn_notification_submit_product_delete_all_no">Submit without deleting</string>
    <string name="btn_notification_submit_product_delete_all">Delete all and register again</string>
    <string name="notification_delete_product_all_setting">Delete all registered data. \nAre you sure? </string>
    <string name="notification_delete_product_all">There is already registered data. \nAre you sure you want to delete the registered data? </string>
    <string name="notification_delete_product">Sent successfully. \nAre you sure you want to delete the data? </string>
    <string name="btn_notification_delete_product_yes">Yes</string>
    <string name="btn_notification_delete_product_no">No</string>
    <string name="submit_progressing">Submitting data</string>
    <string name="titleSelectDate">Duration</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="sunday">day</string>
    <string name="monday">month</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Water</string>
    <string name="thursday">Tree</string>
    <string name="friday">Gold</string>
    <string name="saturday">Sat</string>
</resources>